--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-cloudflare": "^7.0.5",
 		"drizzle-orm": "^0.44.2",
 		"pg": "^8.16.3"
 	}
