--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-node": "^5.2.13",
+		"@sveltejs/adapter-netlify": "^5.0.2",
 		"drizzle-orm": "^0.44.2",
 		"pg": "^8.16.3"
 	}
